# ParusEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ParusEngine.vcxproj  ParusEngine.vcxproj.filters  README.md  TesseraEngine.sln  compile_shaders.bat  compile_shaders.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
TesseraEngine/: Application.cpp  Application.h  GlfwInitializer.cpp  GlfwInitializer.h  Main.cpp  TesseraEngine.rc  TesseraEngine.vcxproj  TesseraEngine.vcxproj.filters  TesseraLog.cpp  TesseraLog.h  VulkanDebugManager.cpp  VulkanDebugManager.h  VulkanDeviceManager.cpp  VulkanDeviceManager.h  VulkanExtensionManager.cpp  VulkanExtensionManager.h  VulkanImageViewManager.h  VulkanInitializer.cpp  VulkanInitializer.h  VulkanInstanceManager.cpp  VulkanInstanceManager.h  VulkanLogicalDeviceManager.cpp  VulkanLogicalDeviceManager.h  VulkanPhysicalDeviceManager.cpp  VulkanPhysicalDeviceManager.h  VulkanQueueFamiliesManager.cpp  VulkanQueueFamiliesManager.h  VulkanSurfaceManager.cpp  VulkanSurfaceManager.h  VulkanSwapChainManager.cpp  VulkanSwapChainManager.h  VulkanValidationLayersManager.cpp  VulkanValidationLayersManager.h  resource.h
TesseraEngine/source/: Application.cpp  Application.h  Core.cpp  Core.h  Event.h  Main.cpp  ShaderLoader.h  TesseraLog.cpp  VulkanDebugManager.cpp  VulkanFramebufferManager.cpp  VulkanGraphicsPipelineManager.cpp  VulkanGraphicsPipelineManager.h  VulkanImageViewManager.h  VulkanPhysicalDeviceManager.h
TesseraEngine/source/core/: Asserts.h  Defines.h  Input.cpp  Input.h
TesseraEngine/source/core/application/: Application.cpp  Application.h  ApplicationInfo.cpp  ApplicationInfo.h
TesseraEngine/source/core/platform/: Platform.h  PlatformWindows.cpp
TesseraEngine/source/entities/: GlobalUbo.h  UniformBufferObject.h  Vertex.h
TesseraEngine/source/glfw/: GlfwInitializer.cpp  GlfwInitializer.h
TesseraEngine/source/graphics/: GraphicsLibrary.h
TesseraEngine/source/graphics/glfw/: GlfwLibrary.cpp  GlfwLibrary.h
TesseraEngine/source/graphics/gui/: ConsoleGui.cpp  ConsoleGui.h
TesseraEngine/source/graphics/imgui/: ImGuiLibrary.cpp  ImGuiLibrary.h
TesseraEngine/source/importers/mesh/: ObjImporter.cpp  ObjImporter.h
TesseraEngine/source/importers/textures/: TextureImporter.cpp  TextureImporter.h
TesseraEngine/source/math/: Math.cpp  Math.h  UniformBufferObjects.h
TesseraEngine/source/renderer/: Renderer.h
TesseraEngine/source/renderer/vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
TesseraEngine/source/renderer/vulkan/builder/: VulkanImage.cpp  VulkanImage.h
TesseraEngine/source/renderer/vulkan/light/: Light.h
TesseraEngine/source/renderer/vulkan/material/: Material.cpp  Material.h
TesseraEngine/source/services/: Service.h  Services.cpp  Services.h
TesseraEngine/source/shaders/: shader.frag  shader.vert
TesseraEngine/source/threading/: ThreadPool.cpp  ThreadPool.h
TesseraEngine/source/utils/: ShaderLoader.cpp  TesseraLog.cpp  TesseraLog.h  Utils.h
TesseraEngine/source/utils/interfaces/: Initializable.h  Service.h  ServiceLocator.cpp  ServiceLocator.h
TesseraEngine/source/vulkan/: BufferManager.cpp  BufferManager.h  CommandBufferManager.cpp  CommandBufferManager.h  CommandPoolManager.cpp  CommandPoolManager.h  DebugManager.cpp  DebugManager.h  DescriptorSetLayoutManager.cpp  DescriptorSetLayoutManager.h  DeviceManager.cpp  DeviceManager.h  ExtensionManager.cpp  ExtensionManager.h  FramebufferManager.cpp  FramebufferManager.h  GraphicsPipelineManager.cpp  GraphicsPipelineManager.h  ImageViewManager.cpp  ImageViewManager.h  InstanceManager.cpp  InstanceManager.h  PhysicalDeviceManager.cpp  PhysicalDeviceManager.h  QueueFamiliesManager.cpp  QueueFamiliesManager.h  QueueManager.cpp  QueueManager.h  SurfaceManager.cpp  SurfaceManager.h  SwapChainManager.cpp  SwapChainManager.h  SyncObjectsManager.cpp  SyncObjectsManager.h  VertexBufferManager.cpp  VertexBufferManager.h  VulkanDebugManager.h  VulkanExtensionManager.cpp  VulkanFramebufferManager.h  VulkanGraphicsPipelineManager.cpp  (+2 more)
TesseraEngine/source/world/: Storage.cpp  Storage.h  World.cpp  World.h
TesseraEngine/source/world/camera/: SpectatorCamera.cpp  SpectatorCamera.h
config/: engine.ini
docs/: ROADMAP.md
source/: Main.cpp
source/engine/: Asserts.h
source/engine/application/: Application.cpp  Application.h
source/engine/input/: Input.cpp
source/engine/logs/: Logs.cpp  Logs.h
source/engine/utils/: Utils.h
source/engine/utils/math/: Math.cpp  Math.h  UniformBufferObjects.h
source/services/: Services.h
source/services/config/: ConfigError.h  ConfigParser.h  Configs.cpp  Configs.h
source/services/console/: Console.cpp  Console.h  Trie.h
source/services/graphics/: GraphicsLibrary.h
source/services/graphics/gui/: ConsoleGui.cpp  ConsoleGui.h
source/services/graphics/imgui/: ImGuiLibrary.cpp  ImGuiLibrary.h  Theme.h
source/services/platform/: Platform.h  PlatformWindows.cpp  PlatformWindows.h
source/services/renderer/: Material.h  Texture.h  TextureType.h
source/services/renderer/vulkan/: GraphicsOverlay.h  VulkanConfigurator.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanInitializer.cpp  VulkanInitializer.h  VulkanRenderer.cpp  VulkanRenderer.h
source/services/renderer/vulkan/mesh/: Mesh.h  (+3 more)
source/services/serialization/: BinaryStream.h  FormatHeader.cpp  FormatHeader.h  MeshFormat.cpp  MeshFormat.h  SceneData.h  Serialization.cpp  Serialization.h  TextureFormat.cpp  TextureFormat.h  WorldFormat.cpp  WorldFormat.h
source/services/threading/: ThreadPool.cpp  ThreadPool.h
source/services/world/: SceneLight.h  Storage.cpp  Storage.h  World.cpp  World.h  WorldMeshInstance.h
source/services/world/camera/: SpectatorCamera.cpp  SpectatorCamera.h
source/services/world/entity/: Components.h  Entity.h  EntityManager.cpp  EntityManager.h
source/shaders/: depthprepass.vert  main.frag  main.vert  shadow.vert  sky.frag  sky.vert  ssao.frag  ssao_blur.frag
tests/: EntityManagerTests.cpp  MathTests.cpp  SerializationTests.cpp  WorldFormatTests.cpp
(+90 files in other folders)
